--- a/package/Dockerfile-downloader
+++ b/package/Dockerfile-downloader
@@ -9,6 +9,12 @@ RUN zypper -n in git unzip tar gzip curl && \
     zypper -n clean -a && rm -rf /tmp/* /var/tmp/* /usr/share/doc/packages/* && \
     mkdir -p /var/lib/llmos/llmos-operator
 
+# Add build arg envs
+ARG VERSION
+ARG DATE
+ENV LLMOS_SERVER_VERSION ${VERSION}
+ENV LLMOS_BUILD_DATE ${DATE}
+
 # Add dumb-init
 ENV INIT_VERSION 1.2.5
 RUN ARCH=$(uname -m); \
@@ -16,25 +22,12 @@ RUN ARCH=$(uname -m); \
     chmod +x dumb-init && \
     mv dumb-init /usr/bin/dumb-init
 
-ARG LLMOS_UI_VERSION
-ENV LLMOS_UI_VERSION ${LLMOS_UI_VERSION:-latest}
-# also update the api-ui-version in pkg/settings/settings.go when updating the version here.
-ENV LLMOS_API_UI_VERSION 1.1.11
-
-ARG VERSION
-ARG DATE
-ENV LLMOS_SERVER_VERSION ${VERSION}
-ENV LLMOS_BUILD_DATE ${DATE}
 RUN mkdir -p /usr/share/llmos/llmos-operator && \
     cd /usr/share/llmos/llmos-operator && \
-    curl -sL https://releases.1block.ai/dashboard/${LLMOS_UI_VERSION}.tar.gz | tar xvzf - --strip-components=2 && \
-    mkdir -p /usr/share/llmos/llmos-operator/api-ui && \
-    cd /usr/share/llmos/llmos-operator/api-ui && \
-    curl -sL https://releases.1block.ai/api-ui/${LLMOS_API_UI_VERSION}.tar.gz | tar xvzf - --strip-components=1 && \
     cd /var/lib/llmos/llmos-operator
 
-COPY package/entrypoint.sh llmos-operator /usr/bin/
-RUN chmod +x /usr/bin/entrypoint.sh
+COPY package/entrypoint-downloader.sh llmos-operator /usr/bin/
+RUN chmod +x /usr/bin/entrypoint-downloader.sh
 
 VOLUME /var/lib/llmos/llmos-operator
-ENTRYPOINT ["entrypoint.sh"]
+ENTRYPOINT ["entrypoint-downloader.sh"]
