--- a/deploy/charts/llmos-operator/templates/rbac.yaml
+++ b/deploy/charts/llmos-operator/templates/rbac.yaml
@@ -12,3 +12,27 @@ subjects:
   - kind: ServiceAccount
     name: {{ include "llmos-operator.serviceAccountName" . }}
     namespace: {{ .Release.Namespace }}
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: {{ .Release.Name}}-registry-reader
+rules:
+- apiGroups:
+  - ""
+  resources:
+  - secrets
+  verbs:
+  - get
+  - list
+  - watch
+- apiGroups:
+  - ml.llmos.ai
+  resources:
+  - registries
+  - models
+  - datasetversions
+  verbs:
+  - get
+  - list
+  - watch
