chore: bump llmos-gpu-stack chart

--- a/deploy/charts/system-charts/Chart.yaml
+++ b/deploy/charts/system-charts/Chart.yaml
@@ -30,7 +30,7 @@ dependencies:
       - ml-framework
       - ray.io
   - name: llmos-gpu-stack
-    version: 0.1.0
+    version: 0.1.1-rc2
     repository: "https://llmos-gpu-stack-charts.1block.ai"
     tags:
       - gpu-operator
