--- a/pkg/template/templates/addons/llmos-gpu-stack.yaml
+++ b/pkg/template/templates/addons/llmos-gpu-stack.yaml
@@ -11,7 +11,7 @@ metadata:
 spec:
   repo: http://system-charts-repo.llmos-system.svc
   chart: llmos-gpu-stack
-  version: 0.1.0
+  version: 0.1.1-rc2
   enabled: true
   defaultValuesContent: |-
     gpuStack:
@@ -130,7 +130,7 @@ spec:
       enabled: true
       image:
         registry: ghcr.io
-        repository: llmos-ai/mirrored-projecthami-volcano-vgpu-device-plugin
+        repository: llmos-ai/volcano-vgpu-device-plugin
       runtimeClassName: "nvidia"
       nodeSelector:
         gpustack.llmos.ai/gpu-node: "true"
