--- a/deploy/charts/llmos-crd/templates/ml.llmos.ai_datasetversions.yaml
+++ b/deploy/charts/llmos-crd/templates/ml.llmos.ai_datasetversions.yaml
@@ -24,6 +24,9 @@ spec:
     - jsonPath: .spec.version
       name: Version
       type: string
+    - jsonPath: .status.publishStatus.snapshotName
+      name: VolumeSnapshot
+      type: string
     - jsonPath: .metadata.creationTimestamp
       name: Age
       type: date
@@ -67,6 +70,8 @@ spec:
                 type: object
               dataset:
                 type: string
+              publish:
+                type: boolean
               version:
                 type: string
             required:
@@ -103,6 +108,29 @@ spec:
                   - type
                   type: object
                 type: array
+              publishStatus:
+                properties:
+                  jobName:
+                    description: JobName is the name of the Job created for downloading
+                      the model
+                    type: string
+                  lastTransitionTime:
+                    format: date-time
+                    type: string
+                  message:
+                    type: string
+                  phase:
+                    description: Phase is the phase of the VolumeSnapshot
+                    type: string
+                  pvcName:
+                    description: PVCName is the name of the PVC created for this model
+                      version
+                    type: string
+                  snapshotName:
+                    description: SnapshotName is the name of the VolumeSnapshot created
+                      for this model version
+                    type: string
+                type: object
               registry:
                 type: string
               rootPath:
