--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -10,7 +10,7 @@ env:
 
 snapshot:
   # https://goreleaser.com/customization/snapshots/
-  name_template: '{{ trimprefix .Summary "v" }}'
+  version_template: '{{ trimprefix .Summary "v" }}'
 
 checksum:
   # https://goreleaser.com/customization/checksum/
