--- a/package/Dockerfile-webhook
+++ b/package/Dockerfile-webhook
@@ -1,33 +1,21 @@
-FROM registry.opensuse.org/opensuse/leap:15.6
+# Optimized webhook container with Chainguard Wolfi base image
+FROM cgr.dev/chainguard/wolfi-base
+
+# Install basic tools
+RUN apk add --no-cache bash tini curl kubectl jq
 
 WORKDIR /var/lib/llmos/llmos-operator
 
-RUN zypper ar -G https://download.opensuse.org/repositories/utilities/15.6/utilities.repo || true && \
-    zypper ref
+# Copy binary and unified entrypoint
+COPY llmos-operator /usr/bin/llmos-operator
+COPY package/entrypoint.sh /usr/bin/entrypoint.sh
 
-RUN zypper -n in git unzip tar gzip curl && \
-    zypper -n clean -a && rm -rf /tmp/* /var/tmp/* /usr/share/doc/packages/* && \
-    mkdir -p /var/lib/llmos/llmos-operator
-
-# Add build arg envs
+# Set build metadata
 ARG VERSION
 ARG DATE
-ENV LLMOS_SERVER_VERSION ${VERSION}
-ENV LLMOS_BUILD_DATE ${DATE}
-
-# Add dumb-init
-ENV INIT_VERSION 1.2.5
-RUN ARCH=$(uname -m); \
-    curl -sfL https://github.com/Yelp/dumb-init/releases/download/v${INIT_VERSION}/dumb-init_${INIT_VERSION}_${ARCH} -o dumb-init && \
-    chmod +x dumb-init && \
-    mv dumb-init /usr/bin/dumb-init
-
-RUN mkdir -p /usr/share/llmos/llmos-operator && \
-    cd /usr/share/llmos/llmos-operator && \
-    cd /var/lib/llmos/llmos-operator
-
-COPY package/entrypoint-webhook.sh llmos-operator /usr/bin/
-RUN chmod +x /usr/bin/entrypoint-webhook.sh
+ENV LLMOS_SERVER_VERSION=${VERSION}
+ENV LLMOS_BUILD_DATE=${DATE}
 
 VOLUME /var/lib/llmos/llmos-operator
-ENTRYPOINT ["entrypoint-webhook.sh"]
+ENV LLMOS_MODE=webhook
+ENTRYPOINT ["/usr/bin/entrypoint.sh"]
