chore: update chart versions and gitignore entries
- Update llmos-gpu-stack from 0.1.1-rc2 to 0.1.1
- Update llmos-agents from 0.1.0-rc1 to 0.1.0-rc2
- Add .cursor and .trae to gitignore
- Adjust resource requests and descriptions in llmos-agents.yaml

--- a/deploy/charts/system-charts/Chart.yaml
+++ b/deploy/charts/system-charts/Chart.yaml
@@ -30,7 +30,7 @@ dependencies:
       - ml-framework
       - ray.io
   - name: llmos-gpu-stack
-    version: 0.1.1-rc2
+    version: 0.1.1
     repository: "https://llmos-gpu-stack-charts.1block.ai"
     tags:
       - gpu-operator
@@ -70,7 +70,7 @@ dependencies:
     tags:
       - llmos-monitoring
   - name: llmos-agents
-    version: 0.1.0-rc1
+    version: 0.1.0-rc2
     repository: "https://llmos-charts.1block.ai"
     tags:
       - llmos-agents
