fix(upgrade): update k3s version and fix upgrade controller logic
update k3s tag to v1.33.1+k3s1
make kubernetesVersion required in VersionSpec
use GlobalSystemImageRegistry for notebook images
fix upgrade controller condition check and plan configurations

--- a/deploy/charts/llmos-crd/templates/management.llmos.ai_versions.yaml
+++ b/deploy/charts/llmos-crd/templates/management.llmos.ai_versions.yaml
@@ -47,6 +47,7 @@ spec:
             description: VersionSpec defines the desired state of Version
             properties:
               kubernetesVersion:
+                description: Specify the kubernetes version to upgrade to
                 type: string
               minUpgradableVersion:
                 type: string
@@ -57,6 +58,7 @@ spec:
                   type: string
                 type: array
             required:
+            - kubernetesVersion
             - releaseDate
             type: object
         type: object
