fix(upgrade): make kubernetesVersion required and improve image registry handling
- Change KubernetesVersion field from optional to required in UpgradeSpec
- Update CRD and sample upgrade manifests to reflect new version requirements
- Improve image registry parsing to handle multi-part registry URLs
- Add drain configuration with force option to agent upgrade plan

--- a/deploy/charts/llmos-crd/templates/management.llmos.ai_upgrades.yaml
+++ b/deploy/charts/llmos-crd/templates/management.llmos.ai_upgrades.yaml
@@ -120,6 +120,7 @@ spec:
                     type: integer
                 type: object
               kubernetesVersion:
+                description: Specify the Kubernetes version to upgrade to
                 type: string
               registry:
                 type: string
@@ -127,6 +128,7 @@ spec:
                 description: The LLMOS Operator version to upgrade to
                 type: string
             required:
+            - kubernetesVersion
             - version
             type: object
           status:
